# ChangeLog for dev-python/simplecv
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/simplecv/ChangeLog,v 1.2 2013/12/23 04:26:15 jsbronder Exp $

  23 Dec 2013; Justin Bronder <jsbronder@gentoo.org> simplecv-1.3.ebuild:
  Depend on python-imaging over imaging

*simplecv-1.3 (26 Jun 2013)

  26 Jun 2013; Justin Bronder <jsbronder@gentoo.org> +simplecv-1.3.ebuild,
  +files/new-support-for-opencv-2.4.3-added.patch,
  +files/remove-failing-test.patch, +files/remove-failing-tests.patch,
  +metadata.xml:
  Initial import
