@@ -5,13 +5,25 @@ AUX new-support-for-opencv-2.4.3-added.patch 4889 SHA256 7ba7671ee56b81e69d38a02
 AUX remove-failing-test.patch 1476 SHA256 9fb4e06794b72f63c2e78ae12cdf87748962ae6222ed0263d8e7a5c745d585e0 SHA512 d07daa7addc1f824a2e7bc70e51da05917e559ace9779035a032ce5358b1e0dee3184e44f9eaab137bf8f7a261a136f1f909ea1617e54a8eb7735876b5e74316 WHIRLPOOL 5d36fec3ead4f7bb25afec3fc6bef7172c48b2ae092e077598fd324ecaa0a928090701ada332eb9c0464e6ede18c0d347c42802a2d7788fb5458879ace3a3928
 AUX remove-failing-tests.patch 7650 SHA256 cdb82deecdad621b57e042d4badc124b72a03575e00f0b9889bea7b29c75e644 SHA512 23785a60a7c9250ec61b2ba8f9e17137921208cec90cb57ad6de071105366739890b1c7a453effcfa1236d6eb16d04f01da6c0bdc338276c44e1d1508a96c575 WHIRLPOOL 1c2dcd06087dbc11fc7ba46c7318ecf46288b8e704f69033b5ad09b3c2c97d488018bac6e5d89452bcfdd9d21b110c418ad717b46417d622f3f0e00dc899fc96
 DIST simplecv-1.3.tar.gz 42860284 SHA256 3510727fa5e219c811cf89bce21ecf29647bdd4ef48a0a78aa29b10b9f583947 SHA512 47fa3c0bb41057ae17323aeb68711ef4716c4fe6607162218477af9070a1b1a03a7300f38b2c2a5c54ff69b916267504aeeac7c3108d6a45045a1469a93005b8 WHIRLPOOL 0206dfc06627b78e96aa7487b6c3450cde043e1527044e413b6111831aa48b32dd043fbebbb33c61ffb1aab7683187bf76db4f0a641cdcd0c3dbd6c8d36e1b18
-EBUILD simplecv-1.3.ebuild 1297 SHA256 9840ae4e84f7c952f1ddd1497b595e334418c5cabdae13696b91786d8d8a6b7a SHA512 9abe611b4236bd9f793be435d1da4a6179e778799a33cfc0c7d38da6516afa69b171e78d418a000ae63ee317b13250c5ed7d7cbebfb3c964ffe10772814c18d9 WHIRLPOOL 5d9708c4bb52ba3d9673c87d3552f03f2624279e20c034929a08eb52309eadecbd18c366dd8cb8b05824e08f242d6ab9828c052f8e0d4191c88e4f3966efc47f
-MISC ChangeLog 590 SHA256 cebba0ae2155e9ec002453635ef6e668914ed2d905a5cd1b32a10b51b1373782 SHA512 bbaaff5646d5c5957ad482fd5a8835d5c375cbf67512b1cd6a74bbbccad219471d1fe79ef52de45057554d538998770e6d34a7754cab1917bd92bc52692e306c WHIRLPOOL 7a91043832e923af8825e1a319d1f4ff96514a740d5b20b525014c9d05e5d4f0f3ef1ebd8aa3078d4fc71bf712ed7842245964654768993219e492350bfbd093
+EBUILD simplecv-1.3.ebuild 1356 SHA256 ecd595f42820b3a941a9004923a5b4083cc9a6602c173c1e6c8d44ca6cb94da8 SHA512 2446ba3e8ef231d8941ffce6a9f97d83eb40c5aef50419373d63b58128f8876da5ed7598609e1269328673ea025bc5d34915b8d3f050c3f3e43f0cb9989f58fb WHIRLPOOL ddadafb1b6bc459f858e00f353613da2dc02d7665c4e73cdbc95e2bdebe4820aa0aa80b852829b4627fd346d6f58a15567093c7cfa36b612abff274d508c7ddc
+MISC ChangeLog 740 SHA256 c6973874d6bb1fc7c3c911d44d087b05c131c3e04570a901e83b5b89bbf486d8 SHA512 81db3bf93abf2bd7c5d3c51893eb1883590341387f7bcdd18bb1764c6097085578d93bf1c11c102d0dfabc77f7db5d7fbcb91ac2e346e974aaf3092e1e44d903 WHIRLPOOL fdc696730ec36627855ce8cdd7fb4e0268ea23b9d09a07e360099662bd655c016a418c2fea2820d9a67a6949980d3831857d9b61f6ed8f8a06dce09c1b03b184
 MISC metadata.xml 291 SHA256 14c21c550d35b5fa3ca3f41ae523e91341dbcfb276f8015e86b54be81898e362 SHA512 ffd8e4dcf1574190caaf1c421774737e046c287bd7007c09f9097f34bdc739584a982915950da094484fcb1c7f6922bf110c465dcd6cf8a99badf417e927a6c5 WHIRLPOOL 163eb230766f110fa34b046750801d29b3f5d4a4311667cf8a111f67bf797a5236415f75293731a2d767889931808f852c04b96590faa216d541ecdd9e5cdcc8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlK3u2wACgkQ4MrvBE1wQ8nppQCeMZ+z0W3MejZamECbtktKG9/6
-y5UAoIrhomF4hTxpdSKbC7Ppr2WT1rdH
-=DGfi
+iQJ8BAEBCABmBQJS4tw9XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
+QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOcZucP/ROYLRRkyfrd3uG+bT1MBDWq
+bWnx3NodjiQ/lHDNieXGAcEwosQwAV58ss05gpY6QaNdJjsxbHUJLyniQIpDbTYx
+8YZTyf/vW+2ex58KcYEzKOFjskezrKnmj0FtI3uK9Btzh5wpZ+iQozDg5yIc75DF
+0/1EQ3fQM4agikKvoNIMLeqSxlF1nbJlg+QKA56Q+EtvgSfvVKyocFYjJV4R09jf
+AWf2qCZhgABm0wGdB3FfSozsZbjYBtKZrvuyHLH/1H0Q5TpY6U2mUHx3NGsNySs3
+JgMIyfQSHTFkJZPVHzKgzjZ4j4ZjzdyNfKDBLKe4i1cF8/XeB0OKE9JN2fty6tb3
+tuMzflMuHRg92hy4fQudOp3SJsrkXTjtrtLsqe3Y3GexXjz5LEUW4k95888Jz2OM
+MGQCQGOGtWWmTEZbzPm3lcRx6xb6d9nmVdCYPwDC9vAYmDPi6k938Fe+Fasz9eI7
+4YdqCrxu5tfB/kPAnDkRiu9jYd88dM9KA2mJ6YKyGry5cjyEZ4WBsDEcBmmETV/v
+G5zvmsj2oFraLY3EVhfTobih/dwh7XBDKOh9vv/sgo3y4Iag/UThAEXmRk+t5Bu0
+WwJT3EHxP+OMP4WiMtiTcI4gH5qt1UXPWhTUk+v4nw+0053kT9LugN51POOvIK8R
+g7nuKY4/7FqFOyp9OjTk
+=oHMQ
 -----END PGP SIGNATURE-----
