@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/simplecv/simplecv-1.3.ebuild,v 1.2 2013/12/23 04:26:15 jsbronder Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/simplecv/simplecv-1.3.ebuild,v 1.3 2014/01/24 21:32:21 dilfridge Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python2_7 )
@@ -22,7 +22,7 @@ DEPEND="
 	test? ( dev-python/nose[${PYTHON_USEDEP}] )"
 
 RDEPEND="
-	>=media-libs/opencv-2.2
+	|| ( <media-libs/opencv-2.4.8 >=media-libs/opencv-2.4.8[python,${PYTHON_USEDEP}] )
 	dev-python/numpy[${PYTHON_USEDEP}]
 	sci-libs/scipy[${PYTHON_USEDEP}]
 	virtual/python-imaging[${PYTHON_USEDEP}]
